[project]
name = "quantum-finance"
version = "0.1.0"
description = "Quatnum finance PoC for an article"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "bidict==0.23.1",
    "certifi==2025.10.5",
    "click==8.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "granian==2.5.7",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "kiwisolver==1.5.0",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "numpy==2.4.3",
    "packaging==25.0",
    "pillow==12.1.1",
    "platformdirs==4.5.0",
    "psutil==7.1.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pylatexenc==2.10",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.12.3",
    "python-multipart==0.0.20",
    "python-socketio==5.14.3",
    "redis==6.4.0",
    "reflex==0.8.17",
    "reflex-hosting-cli==0.1.59",
    "rich==14.2.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uv==0.10.8",
    "watchfiles==1.1.1",
    "wrapt==2.0.1",
    "wsproto==1.2.0",
]
